[gd_scene load_steps=67 format=2]

[ext_resource path="res://Enemy2.gd" type="Script" id=1]
[ext_resource path="res://Prova_pegar.gd" type="Script" id=2]
[ext_resource path="res://wolfspritesheet.png" type="Texture" id=3]
[ext_resource path="res://Part Marc/Korred Sprite Sheet.png" type="Texture" id=4]
[ext_resource path="res://fondo.jpg" type="Texture" id=5]
[ext_resource path="res://GROUND LEVEL 1.png" type="Texture" id=6]
[ext_resource path="res://campfire-6.png" type="Texture" id=7]
[ext_resource path="res://campfire-4.png" type="Texture" id=8]
[ext_resource path="res://campfire-2.png" type="Texture" id=9]
[ext_resource path="res://campfire-3.png" type="Texture" id=10]
[ext_resource path="res://campfire-5.png" type="Texture" id=11]
[ext_resource path="res://campfire-7.png" type="Texture" id=12]
[ext_resource path="res://campfire-0.png" type="Texture" id=13]
[ext_resource path="res://campfire-1.png" type="Texture" id=14]
[ext_resource path="res://meat.png" type="Texture" id=15]
[ext_resource path="res://stalactites.png" type="Texture" id=16]
[ext_resource path="res://barra de vida i vainas/HealthBar.tscn" type="PackedScene" id=17]
[ext_resource path="res://barra de vida i vainas/PlayerHealthBar.tscn" type="PackedScene" id=18]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "dead",
"speed": 12.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "move",
"speed": 12.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 31.875, 33.25 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 27, 22 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.5, 23.5 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 352, 64, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 352, 64, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 448, 352, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 352, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 352, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 192, 64, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 448, 192, 64, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 192, 64, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 320, 64, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 320, 64, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 448, 320, 64, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 320, 64, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 320, 64, 32 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 29 ) ],
"loop": false,
"name": "dead",
"speed": 12.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "move",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 50, 22 )

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 514, 18.5 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 5.5, 284.5 )

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 51.75, 15.5 )

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 27.7711, 33.8532 )

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 16.0625, 7.8125 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 40, 19.75 )

[node name="Test Scene" type="Node"]
__meta__ = {
"_edit_horizontal_guides_": [ 291.0 ]
}

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 513.5, 300 )
scale = Vector2( 3.42333, 4.10959 )
texture = ExtResource( 5 )

[node name="MainCharacter" type="KinematicBody2D" parent="."]
position = Vector2( 128, 490 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MainCharacter"]
position = Vector2( -10.4375, 10.3125 )
scale = Vector2( 4.27734, 3.70703 )
frames = SubResource( 9 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCharacter"]
position = Vector2( -12, 35 )
shape = SubResource( 10 )

[node name="AttackArea" type="Area2D" parent="MainCharacter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCharacter/AttackArea"]
position = Vector2( 48, 39 )
shape = SubResource( 28 )
disabled = true

[node name="AttackArea2" type="Area2D" parent="MainCharacter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCharacter/AttackArea2"]
position = Vector2( -72, 42 )
shape = SubResource( 28 )
disabled = true

[node name="Enemy" type="KinematicBody2D" parent="."]
position = Vector2( 824, 538 )
script = ExtResource( 1 )

[node name="AreaEnemy" type="Area2D" parent="Enemy"]

[node name="AttackingCollision" type="CollisionShape2D" parent="Enemy/AreaEnemy"]
position = Vector2( -21.5, -6.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemy/AreaEnemy"]
position = Vector2( -21.5, -10.5 )
scale = Vector2( 1.67188, 1.65625 )
frames = SubResource( 35 )
animation = "dead"

[node name="CollisionEnemy" type="CollisionShape2D" parent="Enemy"]
position = Vector2( -22, -6 )
shape = SubResource( 36 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 513, 581.5 )
shape = SubResource( 37 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="LIMITS" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -4.5, 274.5 )
shape = SubResource( 43 )

[node name="LIMITS2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 1029, 275 )
shape = SubResource( 43 )

[node name="TERRA" type="StaticBody2D" parent="."]

[node name="GroundLevel1" type="Sprite" parent="TERRA"]
position = Vector2( 316.25, 428.5 )
scale = Vector2( 0.0763021, 0.050926 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TERRA"]
position = Vector2( 319.75, 431.5 )
shape = SubResource( 44 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 357.194, 392.5 )
scale = Vector2( 0.461111, 0.605556 )
shape = SubResource( 46 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 316, 313 )
scale = Vector2( 0.461111, 0.605556 )
frames = SubResource( 45 )
frame = 1
playing = true
centered = false

[node name="TERRA2" type="StaticBody2D" parent="."]

[node name="GroundLevel1" type="Sprite" parent="TERRA2"]
position = Vector2( 498.25, 302.5 )
scale = Vector2( 0.0763021, 0.050926 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TERRA2"]
position = Vector2( 501.75, 306.5 )
shape = SubResource( 44 )

[node name="AreaMeat" type="Area2D" parent="."]

[node name="Meat" type="Sprite" parent="AreaMeat"]
position = Vector2( 523, 291 )
scale = Vector2( 0.125, 0.0840278 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaMeat"]
position = Vector2( 524, 291 )
shape = SubResource( 47 )

[node name="Stalactites" type="Area2D" parent="."]

[node name="Stalactites2" type="Sprite" parent="Stalactites"]
position = Vector2( 520, 341.125 )
scale = Vector2( 0.477099, 0.51 )
texture = ExtResource( 16 )

[node name="Stalactites" type="Sprite" parent="Stalactites"]
position = Vector2( 479.25, 342.125 )
scale = Vector2( 0.483778, 0.540769 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stalactites"]
position = Vector2( 500, 342.25 )
shape = SubResource( 48 )

[node name="HealthBar" parent="." instance=ExtResource( 17 )]

[node name="PlayerHealthBar" parent="." instance=ExtResource( 18 )]

[connection signal="animation_finished" from="MainCharacter/AnimatedSprite" to="MainCharacter" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="MainCharacter/AttackArea" to="Enemy" method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="MainCharacter/AttackArea2" to="Enemy" method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="Enemy/AreaEnemy" to="MainCharacter" method="_on_AreaEnemy_body_entered"]
[connection signal="body_entered" from="Area2D" to="MainCharacter" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="AreaMeat" to="MainCharacter" method="_on_AreaMeat_body_entered"]
[connection signal="body_entered" from="Stalactites" to="MainCharacter" method="_on_Stalactites_body_entered"]
